Changes to reloj and style

--- a/reloj.html
+++ b/reloj.html
@@ -58,7 +58,7 @@
             
             <section id="contenido">
                 <div>
-                    <h4>La hora se mostrara aqui abajo</h4>
+                    <h4 class="h4_reloj">La hora se mostrara aqui abajo</h4>
                     <p id="txt"></p>
                 </div>
             </section>
