a litle change on index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                     <div id="login">
                         <form>
-                            <h4><span>Identificate</span></h4>
+                            <h4><span>Log in</span></h4>
                                 <form>
                                     <label for="nombre">Nombre</label><br/>
                                     <input type="text" name="nombre"/><br/>
