Revert "Testing again"
This reverts commit e20bb2a8a2c3382c7043d91d3f3c9787d6cc55cb.

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                         <form>
                             <h4><span>Log in</span></h4>
                                 <form>
-                                    <label for="nombre">Name</label><br/>
+                                    <label for="nombre">Nombre</label><br/>
                                     <input type="text" name="nombre"/><br/>
 
-                                    <label for="correo">Email</label><br/>
+                                    <label for="correo">Correo</label><br/>
                                     <input type="text" name="correo"/><br/>
 
-                                    <label for="contrasena">Password</label><br/>
+                                    <label for="contrasena">Contrasena</label><br/>
                                     <input type="text" name="contrasena"/><br/>
 
                                     <input id="button" type="submit" value="Enviar"/>
